found_tours uniq fixed, word-wrap 4 articles fixed

--- a/app/assets/stylesheets/import/articles.sass
+++ b/app/assets/stylesheets/import/articles.sass
@@ -7,3 +7,5 @@
   img
     width: 200px
     height: 200px
+  .caption
+    word-wrap: break-word
